--- a/css/contactus.css
+++ b/css/contactus.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500');
 * {box-sizing: border-box;}
 body {
-	color: white;
+	
 	font-family: Montserrat;
 }
 .logo{background-color:#FFFFFF;cursor: pointer; float: left;}
@@ -9,6 +9,10 @@ body {
     border: none;
     padding: 0;
 }
+
+
+
+
 .topnav {
   overflow: hidden;
   background-color:#FFFFFF;
@@ -28,9 +32,9 @@ body {
   transition: all 0.3s ease 0s;
 }
 .topnav a:hover {
-    background-color:blue;
+    background-color:#FFE2CB;
     border: 1px solid #FFFFFF;
-    padding: 0 12px;
+    border-radius: 10px;
 }
 .topnav .icon {
   display: none;
@@ -72,19 +76,24 @@ body {
         #BF5300 80%);}
 
 body {
- background-image: url("https://res.cloudinary.com/enema/image/upload/v1569485002/ClassBGLogin_l9dhub.png");}
+    background-image: url(https://res.cloudinary.com/do2t27qdc/image/upload/c_scale,w_542/v1570891882/ellipse_group_owtmnr.png);
+     background-repeat: no-repeat;
+  
+}
 .formContent{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+
 .form{
+    
     display: flex;
     flex-direction: column;
     width: 50%;
-    height: 420px;
-    margin-top: 60px;
+    height: 820px;
+    margin-top: 40px;
     padding: 40px;
     border-radius: 5px;
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.9);
@@ -94,32 +103,49 @@ body {
     text-align: center;
     padding: 0 0 10px 0;
     padding: 0 0 15px;
-    color: #194A21;
+    color: #BF5300;
+    font-weight: bolder;
+   
+}
+
+.form h3{
+    text-align: center;
+    padding: 0 0 10px 0;
+    padding: 0 0 15px;
+    color: #0000A2;
+   
 }
 label{
+ 
     font-weight: 600;
     font-size: 16px;
     color: #194A21;
-}
-
-input[type="text"],
-input[type="email"] {
-    width: 80%;
-    padding: 8px;
-    outline: none;
-    border-radius: 5px;
+    float: left;
 }
 
 input[type="text"],
 input[type="email"],
+input[type="phone"]{
+    
+    width: 100%;
+    padding: 8px;
+    outline: none;
+    border-radius: 5px;
+    
+}
+
+input[type="text"],
+input[type="email"],
+input[type="phone"],
 textarea {
+   
     background: none;
     outline: none;
     border: none;
     border: 1px solid #194A21;
     color: #194A21;
     margin-bottom: 10px;
-}
+ }
 
 input[type="submit"]{
     width: 100%;
@@ -127,25 +153,30 @@ input[type="submit"]{
     outline: none;
     margin: 15px 0 30px 0;
     color: #fff;
-    background-color: #003C00;
+    background-color: #BF5300;;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 15px;
     font-weight: 500;
 }
+
+input[type="submit"]:hover{
+    background-color: #C2641C;
+    cursor: pointer;
+}
 textarea{
     border-color: #194A21;
     outline: none;
     border-radius: 5px;
     padding: 10px;
-    max-width: 500px;
+    width: 100%;
 }
 footer{
     text-align: center;
     padding: 20px;
     color: black;
-    margin-top: 150px;
+    margin-top: 50px;
 }
 @media screen and (max-width: 768px) {
     .form{
