--- a/createclass.css
+++ b/createclass.css
@@ -1,4 +1,4 @@
-.container {
+.content {
     /* margin-top: 30px;
     text-align: center; */
     border: 1px solid burlywood;
@@ -13,7 +13,9 @@
     border-radius: 20px;
     background-color: white;
 }
-
+label{
+    color:black;
+}
 table.formtable {
     /* text-align: center;
     margin-left: auto;
@@ -153,10 +155,6 @@ input#fileupload {
     border-radius: 12px;
 }
 
-label {
-    color: blue;
-    font-weight: bold;
-}
 
 tr {
     border-spacing: 20px;
@@ -177,85 +175,6 @@ body {
     font-family: Montserrat;
 }
 
-.logo {
-    background-color: #FFFFFF;
-    cursor: pointer;
-    padding-bottom: 20px;
-}
-
-.logo a:hover {
-    border: none;
-    padding: 0;
-}
-
-header {
-    padding: 30px 5px;
-}
-
-.form-group label{
-    color:black;
-}
-.topnav {
-    overflow: hidden;
-    background-color: #FFFFFF;
-}
-
-.topnav a {
-    font-size: 16px;
-    color: #BF5300;
-    text-align: center;
-    padding: 0px 12px;
-    font-style: bold;
-    text-decoration: none;
-    transition: all 0.3s ease 0s;
-}
-
-.topnav a:hover {
-    background-color: blue;
-    border: 1px solid #FFFFFF;
-    padding: 5px;
-}
-
-.topnav .icon {
-    display: none;
-}
-
-@media screen and (max-width: 768px) {
-    .topnav a:not(:first-child) {
-        display: none;
-    }
-
-    .topnav a.icon {
-        float: right;
-        display: block;
-        /* margin-left: 100px; */
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .topnav.responsive {
-        position: relative;
-        padding-bottom: 50px;
-    }
-
-    .topnav.responsive .icon {
-    
-        top: 145px;
-    }
-
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-        padding: 3px 0px;
-        /* margin-top: 5px; */
-    }
-
-    /* [class*="container"] {
-        width: 100%;
-    } */
-
-}
 
 body {
     background-image: linear-gradient(90deg,
@@ -301,6 +220,6 @@ footer {
     /* float: center; */
     bottom: 0;
     width: 100%;
-    height: 50px;
+    height: 70px;
     margin: 0 auto;
 }
