--- a/css/signup.css
+++ b/css/signup.css
@@ -4,79 +4,14 @@ body {
   color: white;
   font-family: Montserrat;
 }
-.logo{background-color:#FFFFFF;cursor: pointer; float: left;}
-.logo a:hover{
-    border: none;
-    padding: 0;
-}
-.topnav {
-  overflow: hidden;
-  background-color:#FFFFFF;
-  min-height: 54px;
-  vertical-align: middle;
-  text-align: right;
-}
-
-.topnav a {
-  font-size: 16px;
-  color: #BF5300;
-  text-align: center;
-  padding: 0px 12px;
-  margin: auto;
-  font-style: bold;
-  text-decoration: none;
-  transition: all 0.3s ease 0s;
-}
-.topnav a:hover {
-    background-color:blue;
-    border: 1px solid #FFFFFF;
-    padding: 0 12px;
-}
-.topnav .icon {
-  display: none;
-}
-
-@media screen and (max-width: 768px) {
-.topnav a:not(:first-child) {display: none;}
-.topnav a.icon {
-    float: right;
-    display: inline-block;
-  }
-
- .logo {
-  clear: both;
- }
-}
-
-@media screen and (max-width: 768px) {
-.topnav.responsive {position: relative; padding-bottom: 50px;}
-.topnav.responsive .icon {
-    float: none;
-    text-align: right;
-    top: 0;
- }
-
- .logo {
-  clear: both;
-  width: 80%;
-  text-align: left;
- }
-.topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-    padding: 3px 0px;
-    margin-top: 5px;
-  }
-}
 
 /* Bordered form */
 form {
   border: 3px solid #f1f1f1;
   float: right;
   width: 400px;
-  height: 650px;
-  background-color: 
+  /* height: 600px; */
+
 }
 
 .signup_errors{
@@ -127,7 +62,7 @@ button:hover {
 
 /* Extra style for the cancel button (red) */
 .cancelbtn {
-  width: auto;
+  width: 100%;
   padding: 10px 18px;
   background-color: #f44336;
 }
@@ -141,7 +76,7 @@ button:hover {
 /* Avatar image */
 img.avatar {
   width: 40%;
-  border-radius: 50%;
+  /* border-radius: 50%; */
 }
 
 /* Add padding to containers */
@@ -153,13 +88,14 @@ img.avatar {
 span.psw {
   float: right;
   padding-top: 16px;
+  color:#BF5300;
 }
 
 /* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
+
   span.psw {
     display: block;
-    float: none;
+    float: none;@media screen and (max-width: 300px) {
   }
   .cancelbtn {
     width: 100%;
@@ -178,9 +114,19 @@ input {
 }
 
     /* styles for wide screens */
-}
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 600px) {
     /* styles for narrow screens */
+    form {
+      border: 3px solid #f1f1f1;
+      /* float: right; */
+      width: 320px;
+      /* height: 600px; */
+
+    }
+    .cancelbtn{
+      width:100%;
+    }
+
 }
 img.smallscreen { display: none; }
         @media only screen and (max-width: 320px) {
