--- a/css/style.css
+++ b/css/style.css
@@ -2,72 +2,9 @@
 * {box-sizing: border-box;}
 body {
 	color: white;
-	font-family: Montserrat;
-}
-.logo{background-color:#FFFFFF;cursor: pointer; float: left;}
-.logo a:hover{
-    border: none;
-    padding: 0;
-}
-.topnav {
-  overflow: hidden;
-  background-color:#FFFFFF;
-  min-height: 54px;
-  vertical-align: middle;
-  text-align: right;
-}
-
-.topnav a {
-  font-size: 16px;
-  color: #BF5300;
-  text-align: center;
-  padding: 0px 12px;
-  margin: auto;
-  font-style: bold;
-  text-decoration: none;
-  transition: all 0.3s ease 0s;
-}
-.topnav a:hover {
-    background-color:blue;
-    border: 1px solid #FFFFFF;
-    padding: 0 12px;
-}
-.topnav .icon {
-  display: none;
-}
-
-@media screen and (max-width: 768px) {
-.topnav a:not(:first-child) {display: none;}
-.topnav a.icon {
-    float: right;
-    display: inline-block;
-  }
-
- .logo {
-  clear: both;
- }
-}
-
-@media screen and (max-width: 768px) {
-.topnav.responsive {position: relative; padding-bottom: 50px;}
-.topnav.responsive .icon {
-    float: none;
-    text-align: right;
-    top: 0;
- } 
-
- .logo {
-  clear: both;
-  width: 80%;
-  text-align: left;
- }
-.topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-    padding: 3px 0px;
-    margin-top: 5px;
-  }
+  font-family: Montserrat;
+  /* overflow: hidden; */
+  
 }
 body {
     background-image: linear-gradient(90deg,
@@ -108,7 +45,7 @@ img.smallscreen { display: none; }
 }
 h3{
 	position: absolute;
-	top: 350px;
+	top: 200px;
 	margin: 0px;
 	padding: 0px;
 	color: #F57513;
@@ -121,16 +58,16 @@ text-transform: capitalize
 }
 h4{
 	position: absolute;
-	top: 600px;
+	top: 400px;
 	margin: 0px;
-	padding: 0px;
+	padding: 20px;
 	color: #100499;
 	font-family: Mosk;
 	font-size: 30px;
 }
 h2{
 	position: absolute;
-	top: 650px;
+	top: 450px;
 	padding-left: 90px;
 	word-spacing: 30px;
 }
@@ -138,16 +75,16 @@ h2{
 footer{
 	position: absolute;
 	text-align: center;
-	top: 900px;
+	top: 700px;
 	color: white;
 	background-color: #59411C;
 	float: center;
 	bottom: 0;
     width: 100%;
-    height: 50px;
+    height: 70px;
     margin: 0 auto;
 }
-}
+
 h1{
 	position: absolute;
 	text-align: center;
