--- a/login.css
+++ b/login.css
@@ -8,82 +8,16 @@ body {
     font-family: Montserrat;
 }
 
-.logo {
-    background-color: #FFFFFF;
-    cursor: pointer;
-}
-
-.logo a:hover {
-    border: auto;
-    padding: 0;
-}
-
-.topnav {
-    overflow: hidden;
-    background-color: #FFFFFF;
-}
-
-.topnav a {
-    float: right;
-    font-size: 15px;
-    color: #BF5300;
-    text-align: center;
-    padding: 10px 20px;
-    font-style: bold;
-    text-decoration: none;
-    transition: all 0.3s ease 0s;
-}
-
-.topnav a:hover {
-    background-color: grey;
-    padding: 0px;
-}
-
-.topnav .icon {
-    display: none;
-}
-
-@media screen and (max-width: 768px) {
-    .topnav a:not(:first-child) {
-        display: none;
-    }
-    .topnav a.icon {
-        float: right;
-        display: block;
-    }
-}
-
-
-}
-@media screen and (max-width: 768px) {
-    .topnav.responsive {
-        position: relative;
-        padding-bottom: 50px;
-    }
-    
-    .topnav.responsive .icon {
-        float: right;
-        top: 145px;
-    }
-    
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: right;
-        padding: 3px 0px;
-        margin-top: 5px;
-    }
-}
-
 /* Bordered form */
 form {
     border: 3px solid #f1f1f1;
-    float: right;
-    width: 400px;
-    height: 650px;
-    background-color:
+    /* float: right; */
+    /* width: 400px; */
+    /* height: 650px; */
 }
+@media only screen and (max-width: 600px) {
 
+}
 /* Full-width inputs */
 input[type=text],
 input[type=password] {
@@ -235,7 +169,6 @@ footer {
     height: 50px;
     margin: 0 auto;
     float: left;
-}
 
 }
 h3 {
